--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,4 +3,42 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
+<context-param>
+    <param-name>DS_MODE</param-name>
+    <param-value>JDBC</param-value>
+</context-param>
+<context-param>
+    <param-name>DB_DRIVER</param-name>
+    <param-value>com.mysql.cj.jdbc.Driver</param-value>
+</context-param>
+<context-param>
+    <param-name>DB_URL</param-name>
+    <param-value>jdbc:mysql://localhost:3306/epsi-b3-19-20?serverTimezone=UTC</param-value>
+</context-param>
+<context-param>
+    <param-name>DB_LOGIN</param-name>
+    <param-value>sega</param-value>
+</context-param>
+<context-param>
+    <param-name>DB_PWD</param-name>
+    <param-value>sylla</param-value>
+</context-param>
+
+<session-config>
+    <session-timeout>1</session-timeout>
+</session-config>
+
+<jsp-config>
+    <jsp-property-group>
+        <url-pattern>*.jsp</url-pattern>
+        <page-encoding>UTF-8</page-encoding>
+        <include-prelude>/WEB-INF/jsp/tags_lib.jsp</include-prelude>
+    </jsp-property-group>
+</jsp-config>
+
+<welcome-file-list>
+    <welcome-file>login</welcome-file>
+</welcome-file-list>
+
 </web-app>
