--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -18,15 +18,15 @@
 </context-param>
 <context-param>
     <param-name>DB_LOGIN</param-name>
-    <param-value>jeuxcalcmental</param-value>
+    <param-value>root</param-value>
 </context-param>
 <context-param>
     <param-name>DB_PWD</param-name>
-    <param-value>jeuxcalcmental</param-value>
+    <param-value></param-value>
 </context-param>
 
 <session-config>
-    <session-timeout>1</session-timeout>
+    <session-timeout>60</session-timeout>
 </session-config>
 
 <jsp-config>
